syntax = "proto3";

option go_package = "./internal/proto/pb";

message Location {
  double latitude = 1;
  double longitude = 2;
}

message Recommendation {
  string name = 1;
  Location address = 2;
  float distance = 3;
}

message RecommendationRequest {
  Location location = 1;
}

message RecommendationResponse {
  repeated Recommendation recommendations = 1;
}
service RecommendationService {
  rpc GetRecommendations(RecommendationRequest) returns (RecommendationResponse);
}
